--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="page1complete">
     <main>
     <nav>
         <div class="leftnav">
@@ -35,8 +36,15 @@
         <div class="right">
             <img src="./Screenshot_2024-09-08_222239-removebg-preview.png" alt="">
         </div>
-
     </div>
-</main>
+
+  
+    </main>
+</div>
+<div class="page2">
+   <p> Leverage the power<br>of AI in <span><img class="profile1" src="https://media.istockphoto.com/id/1386479318/photo/cheerful-confident-african-businesswoman-wearing-eyeglasses-posing-with-folded-arms.jpg?s=612x612&w=0&k=20&c=bfVUjdLaJ-RciHO-P9uYD46S8ZDPIuCv4g9NA_Q-H_k=" alt=""><img class="profile2" src="https://cdn.pixabay.com/photo/2016/11/21/12/42/beard-1845166_1280.jpg" alt=""><img class="profile3" src="./+.jpg" alt=""></span> aircraft<br>parts procurement</p> 
+</div>
+<div class="page3"></div>
+
 </body>
 </html>
