--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
 <body>
 <div class="page1complete">
@@ -42,9 +46,26 @@
     </main>
 </div>
 <div class="page2">
-   <p> Leverage the power<br>of AI in <span><img class="profile1" src="https://media.istockphoto.com/id/1386479318/photo/cheerful-confident-african-businesswoman-wearing-eyeglasses-posing-with-folded-arms.jpg?s=612x612&w=0&k=20&c=bfVUjdLaJ-RciHO-P9uYD46S8ZDPIuCv4g9NA_Q-H_k=" alt=""><img class="profile2" src="https://cdn.pixabay.com/photo/2016/11/21/12/42/beard-1845166_1280.jpg" alt=""><img class="profile3" src="./+.jpg" alt=""></span> aircraft<br>parts procurement</p> 
+   <p> Leverage the power<br>of AI in <span><img class="profile1" src="https://media.istockphoto.com/id/1386479318/photo/cheerful-confident-african-businesswoman-wearing-eyeglasses-posing-with-folded-arms.jpg?s=612x612&w=0&k=20&c=bfVUjdLaJ-RciHO-P9uYD46S8ZDPIuCv4g9NA_Q-H_k=" alt=""><img class="profile2" src="https://cdn.pixabay.com/photo/2016/11/21/12/42/beard-1845166_1280.jpg" alt=""><img class="profile3" src="./+.jpg" alt=""></span>aircraft<br>parts procurement</p> 
 </div>
-<div class="page3"></div>
+<div class="page3">
+    <div class="left3">
+        <button>Demo our dashboard.</button>
+        <i class="ri-arrow-drop-right-line"></i>
+
+    </div>
+    <div class="right3">
+        <div class="line1">
+            <h1 class="icon01">01</h1>
+              <div class="content">
+                 <h1>AI Revolution</h1>
+                <p>access procurement securely with<br>Blockchain, ensuring part authencity.</p>
+        </div>
+        
+        </div>
+        <hr width="97% ">
+    </div>
+</div>
 
 </body>
 </html>
